<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.apply.ApplyActivity">

        <com.attrsense.android.view.toolbar.AttrToolBarView
            android:id="@+id/tool_bar_view"
            style="@style/AttrToolbarTheme" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="15dp"
            android:text="@string/tab_main_user_apply_mark"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/acTv_contact"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                tools:text="@string/tab_main_user_apply_contact" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/acEt_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_tab_main_user_apply_contact"
                android:maxLines="1"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/acTv_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                tools:text="@string/tab_main_user_apply_phone" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/acEt_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_tab_main_user_apply_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/acTv_company"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                tools:text="@string/tab_main_user_apply_company" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/acEt_company"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_tab_main_user_apply_company"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/acTv_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="16sp"
                tools:text="@string/tab_main_user_apply_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/acEt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_tab_main_user_apply_email"
                android:maxLines="1"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/acTv_description"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:textSize="16sp"
                tools:text="@string/tab_main_user_apply_description" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/acEt_description"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@color/default_gray"
                android:gravity="start"
                android:hint="@string/hint_tab_main_user_apply_description"
                android:padding="5dp"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/acBtn_commit"
            style="@style/CommitButtonTheme" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>