<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        tools:context=".ui.feedback.FeedbackActivity">

        <com.attrsense.ui.library.toolbar.AttrToolBarView
            android:id="@+id/tool_bar_view"
            style="@style/AttrToolbarTheme"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nscrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar_view"
            app:layout_constraintBottom_toTopOf="@+id/acBtn_commit">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/default_gray" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/default_gray"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/acEt_description"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:background="@color/default_gray"
                        android:gravity="start"
                        android:hint="@string/hint_tab_main_user_feedback_description"
                        android:maxLength="30"
                        android:padding="5dp"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/acTv_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:padding="5dp"
                        android:textColor="@color/color_999999"
                        android:text="@string/tab_main_user_feedback_count"
                        android:textSize="12sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/acEt_contact"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/default_gray"
                    android:hint="@string/hint_tab_main_user_feedback_contact"
                    android:inputType="phone|textEmailAddress|number"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:visibility="gone"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textSize="12sp"
                    android:textColor="@color/color_999999"
                    android:text="@string/tab_main_user_feedback_sub_title"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    tools:itemCount="6"
                    app:spanCount="3"
                    tools:listitem="@layout/layout_feedback_item"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    android:overScrollMode="never"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/acBtn_commit"
            style="@style/CommitButtonTheme"
            app:layout_constraintTop_toBottomOf="@+id/nscrollview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>